Cacti CHANGELOG

1.1.31
-issue#1164: Additional issue with Cacti version compare function
-issue#1166: Further language detection/configuration fixes
-issue#1179: Warn during installation if installing moving to older version

1.1.30
-issue#1155: Non-secure mail setting not functional due to changes in phpmailer
-issue#1157: Resolve issue with branch permission api
-issue#1158: Change CLOG to use regex replacement so line details are not mangled
-issue#1161: Graph View regex's are not preserved during automatic page refresh
-issue#1162: Error messages are not display when editing a user
-issue#1166: Default language was not correctly set when editing a user
-issue#1182: Support noAuthNoPriv for SNMPv3 in Cacti
-issue: basename function undefined during upgrade to 1.0.x
-issue: Storage API and translations required for Change password function
-issue: ALTER IGNORE still throws an error when attempting to drop the primary key
-issue: Data Source profile form API generates error when system is half upgraded
-issue: Resolve issue with importing packages
-feature: Update package versions for Cacti version 1.1.29

1.1.29
-issue#871: Allow Nth Percentile and Bandwidth Summation to respect 'Base Value' in template
-issue#965: Duplicate error message and incorrect error code when using LDAP authentication
-issue#1084: Graph Tree Branch not properly populating when editing report item
-issue#1104: Datetime formatting in developer debug mode incorrect
-issue#1106: Template Filters has empty row
-issue#1109: URL used in redirection when referrer already has parameters in it
-issue#1110: Add CPU Total to 'SNMP - Get Processor Information'
-issue#1111: PHP NOTICE when using LDAP authenication
-issue#1116: Filters not allowing "None" or "All" when editing report item
-issue#1119: Reduced amount of data fetched for CPU usage to just the data used
-issue#1121: Bandwidth summation not using correct locale
-issue#1122: Fix issue with local login / potential password problems