@@ -4,6 +4,8 @@ Cacti CHANGELOG
 -issue#1164: Additional issue with Cacti version compare function
 -issue#1166: Further language detection/configuration fixes
 -issue#1179: Warn during installation if installing moving to older version
+-issue#1189: Allow ability to sort tree list by name asc/desc
+-issue#1191: Tree sequences were not set or checked
 
 1.1.30
 -issue#1155: Non-secure mail setting not functional due to changes in phpmailer
